--- a/vr_project_1/src/components/Sidebar/Sidebar.module.css
+++ b/vr_project_1/src/components/Sidebar/Sidebar.module.css
@@ -1,4 +1,4 @@
-.sidebar {
+  .sidebar {
     background: var(--gray-800);
     border-radius: 8px;
     overflow: hidden;
@@ -16,6 +16,19 @@
     align-items: center;
   }
 
+  .profile img {
+    width: 3rem;
+    height: 3rem;
+    border-radius: 8px;
+    margin-top: calc(0px - 1.5rem - 6px);
+  }
+
+  .profile span {
+    font-size: 0.875rem;
+    color: var(--gray-400);
+    line-height: 1.6;
+  }
+
   .sidebar footer {
     border-top: 1px solid var(--gray-600);
     margin-top: 1.5rem;
@@ -25,7 +38,7 @@
   .sidebar footer a {
     width: 100%;
     background: transparent;
-    color: var(--brand-500);
+    color: var(--green-500);
     border: 1px solid var(--green-500);
     border-radius: 8px;
     height: 50px;
@@ -36,4 +49,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    gap: 0.5rem;
+    transition: color 0.1s, background-color 0.1s;
+  }
+
+  .sidebar footer a:hover {
+    background: var(--green-500);
+    color: var(--white);
   }
