--- a/vr_project_1/src/components/Post/Post.module.css
+++ b/vr_project_1/src/components/Post/Post.module.css
@@ -93,7 +93,7 @@
     max-height: none;
   }
 
-  .commentForm button[type="submit"] {
+  .commentForm button[type="submit"]:not(:disabled):hover {
     padding: 1rem 1.5rem;
     margin-top: 1rem;
     border-radius: 8px;
@@ -103,6 +103,11 @@
     font-weight: bold;
     cursor: pointer;
     transition: background-color 0.1s;
+  }
+
+  .commentForm button:disabled {
+    opacity: 0.7;
+    cursor: not-allowed;
   }
   
   .commentForm button[type="submit"]:hover {
